# ksec

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml  rust-clippy.yml
src/: main.rs  zsh.include.sh
