[package]
name = "ksec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.96.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23.0", features = ["v1_29"] }
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1" }
clap = { version = "4", features = ["derive"] }
clap_derive = "4"
clap_complete = { version = "4" }
dirs = "5"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
